--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,91 @@
-    h1{
-        color: #FFF1DB;
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+/* reset */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+header{
+    overflow: hidden;
+}
+
+header::before{
+    content: '';
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1 ;
+    background: url("../images/Background.png"), lightgray 50% / cover no-repeat;
+    background-size: cover ;
+    animation: zoom 8s forwards;
+    /* display: block; */
+
+}
+
+:root{
+    --font-title: 'Kanit';
+    --font-body: 'Kanit';
+    --font-chef: 'League Gothic';
+    --font-button:'Poppins';
+    --destak-color: #FFF1DB;
+    --white: #cfcfcf;
+    --black: #000;
+}
+
+body{
+    position: relative;
+}
+
+
+h1{
+    color: #FFF1DB;
+    text-shadow: -20px 11px 2.8px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: var(--font-title);
+    font-size: 4.7rem;
+    font-weight: 800;
+    line-height: 125%; /* 93.75px */
+    margin: 0 5.4rem;
+}
+
+span#subtitle{
+    color: white;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: var(--font-chef);
+    text-shadow: -7px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-size: 2.5rem;
+    font-weight: 800;
+    letter-spacing: 0.82px;
+    display: block;
+    margin: 2rem 5.4rem;
+}
+
+a{
+    color: var(--destak-color);
+    margin: 2rem 5.4rem;
+    font-family: var(--font-button);
+    background-color: #B77239;
+    padding: .25rem 1rem;
+    border-radius: 0.25rem 0.375rem 0rem 0.5625rem;
+    transition: opacity .7s;
+    
+}
+a:hover{
+    opacity: .8;
+}
+
+@keyframes zoom{
+    from{
+        transform: scale(1);
     }
+    to{
+        transform: scale(1.5);
+    }
+
+}
+
+
+
